# ferrisfleet

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  main.rs
core/: Cargo.toml
core/src/application/: services.rs
core/src/domain/: error.rs
core/src/domain/entities/: cluster.rs  node.rs
core/src/domain/ports/: cluster.rs  iaas.rs  k8s.rs  mod.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/repositories/: iaas_orbstack.rs  mod.rs
