[package]
name = "ferrisfleet-cli"
description = "Command line interface for FerrisFleet"
version.workspace = true
authors.workspace = true
edition.workspace = true


[[bin]]
name = "ferrisfleet-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "env"] }
ferrisfleet-core = { path = "../core" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
