[package]
name = "ferrisfleet-core"
description = "Core business logic library for FerrisFleet"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.8"
uuid = { version = "1.18.0", features = ["v4"] }
